      features allow a non-polymorphic concrete inheritance setup to
      use polymorphic loading on a per-query basis, since concrete
      setups are prone to many issues when used polymorphically in
      all cases.

    - dynamic_loader accepts a query_class= to customize the Query
      classes used for both the dynamic collection and the queries
      built from it.

- sql
    - RowProxy objects can be used in place of dictionary arguments 
      sent to connection.execute() and friends.  [ticket:935]

- dialect
    - Added a new description_encoding attribute on the dialect
      that is used for encoding the column name when processing
      the metadata. This usually defaults to utf-8.

- mssql
    - Added in a new MSGenericBinary type. This maps to the Binary
      type so it can implement the specialized behavior of treating
      length specified types as fixed-width Binary types and
      non-length types as an unbound variable length Binary type.

    - Added in new types: MSVarBinary and MSImage. [ticket:1249]

    - Added in the MSReal and MSNText types.

- sqlite
    - Table reflection now stores the actual DefaultClause value
      for the column. [ticket:1266]

- bugfixes, behavioral changes
- general
- orm
    - Exceptions raised during compile_mappers() are now
      preserved to provide "sticky behavior" - if a hasattr()
      call on a pre-compiled mapped attribute triggers a failing 
      compile and suppresses the exception, subsequent compilation 
      is blocked and the exception will be reiterated on the 
      next compile() call.  This issue occurs frequently
      when using declarative.

    - Fixed some deep "column correspondence" issues which could
      impact a Query made against a selectable containing
      multiple versions of the same table, as well as 
      unions and similar which contained the same table columns
      in different column positions at different levels.
      [ticket:1268]
      